--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
           <img src="/images/profile-hex.png"> 
       </div>      
       <div>
-          <h2>Your Name</h2>
+          <h2>Harshbir Singh</h2>
       </div>
   </header>
 
