--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,9 @@
     <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
 
 
-    <!-- External JS -->
+    <!-- External JS and CDN scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- Internal JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
@@ -50,7 +51,7 @@
 
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form action="/tweets" method="post">          
+        <form id= "submit-tweet" action="/tweets" method="post">          
           <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
           <div class="submit-tweet">
             <button type="submit">Tweet</button>
