Add section for error messages

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,9 @@
     <main class="container">
 
       <section class="new-tweet">
+        <section id="error">
+          <h5 class="error-msg"></h5>
+        </section>
         <h2>Compose Tweet</h2>
         <form id= "submit-tweet" action="/tweets" method="post">          
           <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
@@ -62,7 +65,5 @@
       <section class="tweet">
       </section>
     </main>
-
-
   </body>
 </html>
